--- a/MymrinTest.ipynb
+++ b/MymrinTest.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "[67783 rows x 4 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "4  10001.0 2022-01-10 07:58:00+00:00        UTC+1      Регистрация"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "Edges: [('startevent', 'Прием взыскание'), ('startevent', 'Прием арест'), ('startevent', 'Исполнeно'), ('startevent', 'Исполнено'), ('startevent', 'Назначено в рабочую группу'), ('startevent', 'Проверка_2'), ('Исполнено', 'endevent'), ('Ожидание', 'endevent'), ('Исполнeно', 'endevent'), ('Назначено в рабочую группу', 'endevent'), ('Блокировка', 'endevent'), ('Проверка_1', 'endevent'), ('Ожидание', 'Ожидание'), ('Исполнeно', 'Исполнeно'), ('Проверка_1', 'Проверка_2'), ('Назначено в рабочую группу', 'Исполнено'), ('Регистрация', 'Проверка_2'), ('Проверка_2', 'Проверка_2'), ('Блокировка', 'Ожидание'), ('Исполнено', 'Прием взыскание'), ('Блокировка', 'Назначено в рабочую группу'), ('Прием взыскание', 'Проверка_1'), ('Регистрация', 'Блокировка'), ('Прием арест', 'Регистрация'), ('Прием взыскание', 'Регистрация'), ('Назначено в рабочую группу', 'Исполнeно'), ('Блокировка', 'Исполнено'), ('Блокировка', 'Прием взыскание'), ('Назначено в рабочую группу', 'Блокировка'), ('Проверка_1', 'Проверка_1'), ('Регистрация', 'Проверка_1'), ('Прием взыскание', 'Прием взыскание'), ('Проверка_1', 'Ожидание'), ('Регистрация', 'Регистрация'), ('Проверка_1', 'Назначено в рабочую группу'), ('Регистрация', 'Назначено в рабочую группу'), ('Проверка_3', 'Назначено в рабочую группу'), ('Исполнeно', 'Прием взыскание'), ('Проверка_1', 'Регистрация'), ('Проверка_2', 'Назначено в рабочую группу'), ('Блокировка', 'Исполнeно'), ('Проверка_2', 'Проверка_3'), ('Блокировка', 'Прием арест'), ('Назначено в рабочую группу', 'Ожидание'), ('Проверка_3', 'Проверка_3'), ('Назначено в рабочую группу', 'Назначено в рабочую группу'), ('Блокировка', 'Блокировка'), ('Исполнено', 'Исполнено'), ('Прием арест', 'Прием арест')]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        " Node: endevent]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,40 +1192,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Операция\n",
-       "Блокировка                     86135.433333\n",
-       "Исполнeно                      11792.913194\n",
-       "Исполнено                      16000.336806\n",
-       "Назначено в рабочую группу    661866.102083\n",
-       "Ожидание                           0.000000\n",
-       "Прием арест                        9.809028\n",
-       "Прием взыскание                 1404.792361\n",
-       "Проверка_1                      1450.444444\n",
-       "Проверка_2                       316.788889\n",
-       "Проверка_3                       153.293056\n",
-       "Регистрация                     2821.020139\n",
-       "Name: total_duration, dtype: float64"
+       "Блокировка                    661.822917\n",
+       "Исполнeно                     332.454861\n",
+       "Исполнено                     301.704167\n",
+       "Назначено в рабочую группу    661.906944\n",
+       "Ожидание                        0.000000\n",
+       "Прием арест                     0.646528\n",
+       "Прием взыскание                 0.978472\n",
+       "Проверка_1                    386.456944\n",
+       "Проверка_2                     91.817361\n",
+       "Проверка_3                    152.707639\n",
+       "Регистрация                    60.963194\n",
+       "Name: max_duration, dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "activity_metric = ActivityMetric(data_holder, time_unit='d')\n",
-    "activity_metric.total_duration()"
+    "activity_metric.max_duration()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
        "442131.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
        " 'Ожидание')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,11 +1320,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Смею предположить что увеличение времени основного процесса кроется в операциях 'Блокировка', 'Отправка в общую группу'. А так же возникают вопросы к петлям внутр графа. Возможно это возникает по причине того что я неправильно использовал поля часовой пояс.\n"
+   ]
   },
   {
    "attachments": {},
@@ -1336,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1384,7 @@
        "Name: total_duration, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
